--- a/.github/workflows/infra-destroy.yml
+++ b/.github/workflows/infra-destroy.yml
@@ -24,8 +24,4 @@ jobs:
 
       - name: destroy
         run: terraform destroy -auto-approve
-        working-directory: "./eks"
-
-      - run: echo ${{ steps.plan.outputs.stdout }}
-      - run: echo ${{ steps.plan.outputs.stderr }}
-      - run: echo ${{ steps.plan.outputs.exitcode }}
+        working-directory: "."
