--- a/.github/workflows/infra-ci.yml
+++ b/.github/workflows/infra-ci.yml
@@ -37,6 +37,9 @@ jobs:
       - name: validate
         run: terraform validate
         working-directory: "."
+      
+      - name: Exporting kube config
+        run: export KUBE_CONFIG_PATH=$HOME/.kube/config
 
       - name: plan
         run: terraform plan
