--- a/.github/workflows/infra-create.yml
+++ b/.github/workflows/infra-create.yml
@@ -36,6 +36,9 @@ jobs:
         run: terraform validate
         working-directory: "."
 
+      - name: Exporting kube config
+        run: export KUBE_CONFIG_PATH=$HOME/.kube/config
+
       - name: Plan
         run: terraform plan
         working-directory: "."
